--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ a.btn-flat:hover:before {
             <th width=33%>第2回学校説明会<br>〔7月6日（土）〕</th>
                         <td class="sche" width=33%>
               　※スクナビ打ち合わせ<br>
-              　・<br>
+              　・7月5日（金）16:20～<br>
               　・視聴覚室<br>
               <br>
 
@@ -258,7 +258,7 @@ a.btn-flat:hover:before {
 　17:30  終了、下校<br>
       </td>
               <td width=33%>
-            <a href="" class="btn btn-flat"><span>アンケートは<br>6/15配信</span></a><br>    
+            <a href="https://forms.gle/CQkQcHbkiFuywPWdA" class="btn btn-flat"><span>アンケートは<br>こちら</span></a><br>    
             <br>参加・不参加ともに
             <br>6月22日（金）までに回答<br>
             <br>回答を変更したい場合は、
