--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ a.btn-flat:hover:before {
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>2024スクナビリンク集</title>
+	<title>2024Jスクナビリンク集</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
