--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ a.btn-flat:hover:before {
               <td width=33%>
             <a href="https://forms.gle/CQkQcHbkiFuywPWdA" class="btn btn-flat"><span>アンケートは<br>こちら</span></a><br>    
             <br>参加・不参加ともに
-            <br>6月22日（金）までに回答<br>
+            <br>6月22日（土）までに回答<br>
             <br>回答を変更したい場合は、
             <br>「回答を編集」をクリック</td>
         </tr>
