--- a/index.html
+++ b/index.html
@@ -221,69 +221,33 @@ a.btn-flat:hover:before {
 
         <tr>
             <th width=33%>第1回学校説明会<br>〔6月1日（土）〕</th>
-                        <td class="sche" width=33%>
-              　※スクナビ打ち合わせ<br>
-              　・5月31日（金）16:20～<br>
-              　・視聴覚室<br>
-              <br>
-
-　※当日の活動内容とスケジュール（予定）<br>
-　13:45  当日打ち合わせ<br>
-　14:10  受付、誘導<br>
-　15:00  学校説明会 開始<br>
-　16:10  施設見学案内、質問対応<br>
-　17:30  終了、下校<br>
-      </td>
-              <td width=33%>
-            <a href="https://forms.gle/my5VqF8EG8gT3eHL8" class="btn btn-flat"><span>アンケートは<br>こちら</span></a><br>    
-            <br>参加・不参加ともに
-            <br>5月24日（金）までに回答<br>
-            <br>回答を変更したい場合は、
-            <br>「回答を編集」をクリック</td>
-
+            <td width=33%>終了しました</td>
+            <td width=33%>終了しました</td>
         </tr>
         <tr>
             <th width=33%>第2回学校説明会<br>〔7月6日（土）〕</th>
-                        <td class="sche" width=33%>
-              　※スクナビ打ち合わせ<br>
-              　・7月5日（金）11:55～<br>
-              　・視聴覚室<br>
-              <br>
-
-　※当日の活動内容とスケジュール（予定）<br>
-　13:45  当日打ち合わせ<br>
-　14:10  受付、誘導<br>
-　15:00  学校説明会 開始<br>
-　16:10  施設見学案内、質問対応<br>
-　17:30  終了、下校<br>
-      </td>
-              <td width=33%>
-            <a href="https://forms.gle/CQkQcHbkiFuywPWdA" class="btn btn-flat"><span>アンケートは<br>こちら</span></a><br>    
-            <br>参加・不参加ともに
-            <br>6月22日（土）までに回答<br>
-            <br>回答を変更したい場合は、
-            <br>「回答を編集」をクリック</td>
+            <td width=33%>終了しました</td>
+            <td width=33%>終了しました</td>
         </tr>
      
         <tr>
             <th width=33%>第3回学校説明会<br>〔7月27日（土）〕</th>
                         <td class="sche" width=33%>
               　※スクナビ打ち合わせ<br>
-              　・<br>
-              　・視聴覚室<br>
+              　・前日打ち合わせなし<br>
               <br>
 
 　※当日の活動内容とスケジュール（予定）<br>
-　13:45  当日打ち合わせ<br>
-　14:10  受付、誘導<br>
-　15:00  学校説明会 開始<br>
-　16:10  施設見学案内、質問対応<br>
-　17:30  終了、下校<br>
+　 8:30  当日打ち合わせ<br>
+　 9:20  受付、誘導<br>
+　10:00  学校説明会 開始<br>
+　11:10  施設見学案内、質問対応<br>
+　12:30  終了後、昼食（お弁当が出ます）、下校<br> <br>
       </td>
               <td width=33%>
-            <a href="https://forms.gle/my5VqF8EG8gT3eHL8" class="btn btn-flat"><span>アンケートは<br>近日配信</span></a><br>    
+            <a href="https://forms.gle/qD6KXQLYNjZWQyyd9" class="btn btn-flat"><span>アンケートは<br>こちら</span></a><br>    
             <br>参加・不参加ともに
-            <br>期日までに回答<br>
+            <br>7/17（水）までに回答<br>
             <br>回答を変更したい場合は、
             <br>「回答を編集」をクリック</td>
         </tr>
@@ -291,17 +255,20 @@ a.btn-flat:hover:before {
             <th width=33%>第4回学校説明会<br>〔8月31日（土）〕</th>
                                    <td class="sche" width=33%>
               　※スクナビ打ち合わせ<br>
-              　・<br>
+              　・未定<br>
               　・視聴覚室<br>
               <br>
-
-　※当日の活動内容とスケジュール（予定）<br>
-　13:45  当日打ち合わせ<br>
-　14:10  受付、誘導<br>
-　15:00  学校説明会 開始<br>
-　16:10  施設見学案内、質問対応<br>
-　17:30  終了、下校<br>
-      </td>
+ <br>
+      <br>
+              <br>
+              <br>
+                                      <br>
+                                      <br>
+                                      <br>
+                                      <br>
+                                      <br>
+                                     
+          </td>
               <td width=33%>
             <a href="https://forms.gle/my5VqF8EG8gT3eHL8" class="btn btn-flat"><span>アンケートは<br>近日配信</span></a><br>    
             <br>参加・不参加ともに
@@ -313,16 +280,18 @@ a.btn-flat:hover:before {
             <th width=33%>第5回学校説明会<br>〔10月12日（土）〕</th>
                                     <td class="sche" width=33%>
               　※スクナビ打ち合わせ<br>
-              　・<br>
+              　・未定<br>
               　・視聴覚室<br>
               <br>
-
-　※当日の活動内容とスケジュール（予定）<br>
-　13:45  当日打ち合わせ<br>
-　14:10  受付、誘導<br>
-　15:00  学校説明会 開始<br>
-　16:10  施設見学案内、質問対応<br>
-　17:30  終了、下校<br>
+ <br>
+      <br>
+              <br>
+              <br>
+                                      <br>
+                                      <br>
+                                      <br>
+                                      <br>
+                                      <br>
       </td>
               <td width=33%>
             <a href="https://forms.gle/my5VqF8EG8gT3eHL8" class="btn btn-flat"><span>アンケートは<br>近日配信</span></a><br>    
@@ -335,16 +304,18 @@ a.btn-flat:hover:before {
             <th width=33%>第6回学校説明会<br>〔11月9日（土）〕</th>
                                     <td class="sche" width=33%>
               　※スクナビ打ち合わせ<br>
-              　・<br>
+              　・未定<br>
               　・視聴覚室<br>
               <br>
-
-　※当日の活動内容とスケジュール（予定）<br>
-　13:45  当日打ち合わせ<br>
-　14:10  受付、誘導<br>
-　15:00  学校説明会 開始<br>
-　16:10  施設見学案内、質問対応<br>
-　17:30  終了、下校<br>
+ <br>
+      <br>
+              <br>
+              <br>
+                                      <br>
+                                      <br>
+                                      <br>
+                                      <br>
+                                      <br>
       </td>
               <td width=33%>
             <a href="https://forms.gle/my5VqF8EG8gT3eHL8" class="btn btn-flat"><span>アンケートは<br>近日配信</span></a><br>    
@@ -358,16 +329,18 @@ a.btn-flat:hover:before {
             <th width=33%>第7回学校説明会<br>〔12月14日（土）〕</th>
                                   <td class="sche" width=33%>
               　※スクナビ打ち合わせ<br>
-              　・<br>
+              　・未定<br>
               　・視聴覚室<br>
               <br>
-
-　※当日の活動内容とスケジュール（予定）<br>
-　13:45  当日打ち合わせ<br>
-　14:10  受付、誘導<br>
-　15:00  学校説明会 開始<br>
-　16:10  施設見学案内、質問対応<br>
-　17:30  終了、下校<br>
+ <br>
+      <br>
+              <br>
+              <br>
+                                      <br>
+                                      <br>
+                                      <br>
+                                      <br>
+                                      <br>
       </td>
               <td width=33%>
             <a href="https://forms.gle/my5VqF8EG8gT3eHL8" class="btn btn-flat"><span>アンケートは<br>近日配信</span></a><br>    
@@ -388,7 +361,6 @@ a.btn-flat:hover:before {
 </html>
 
 
-<script src="https://d3js.org/d3.v5.min.js"></script><script src="filesystem:chrome-extension://lkfkkhfhhdkiemehlpkgjeojomhpccnh/temporary/script.js">
-</script>
+<script src="https://d3js.org/d3.v5.min.js"></script>
 </body>
 </html>
