--- a/index.html
+++ b/index.html
@@ -241,17 +241,17 @@ a.btn-flat:hover:before {
         <td class="sche" width=40%>
               　※アンケートは8/19配信予定<br><br>
               　※スクナビ打ち合わせ<br>
-              　・8/30（金）15:50<br>　・会議室１<br><br>
+              　・8/30（金）15:45<br>　・会議室１<br><br>
 
 　※当日の活動内容とスケジュール（予定）<br>
-　13:45  当日打ち合わせ<br>
+　13:30  当日打ち合わせ<br>
 　14:10  受付、誘導<br>
 　15:00  学校説明会 開始<br>
 　16:10  施設見学案内、質問対応<br>
 　17:30  終了、下校<br><br>
       </td>
                           <td width=40%>
-            <a href="" class="btn btn-flat"><span>アンケートは<br>近日配信</span></a><br>    
+            <a href="https://forms.gle/DJ12sSoVB7ftbC9C9" class="btn btn-flat"><span>アンケートは<br>こちら</span></a><br>    
             <br>参加・不参加ともに
             <br>8/24（土）までに回答<br>
             <br>回答を変更したい場合は、
