--- a/index.html
+++ b/index.html
@@ -221,29 +221,30 @@ a.btn-flat:hover:before {
 
         <tr>
             <th width=20%>第1回学校説明会<br>〔5月31日（土）〕</th>
-             <td class="sche" width=40%>
+            <td width=40%>終了しました</td>
+            <td width=40%>終了しました</td>
+        </tr>
+     
+        <tr>
+            <th width=20%>第2回学校説明会<br>〔7月5日（土）〕</th>
+ <td class="sche" width=40%>
               　<br><br>
               　※スクナビ前日打ち合わせ<br>
-              　・5/30（金）15:45<br>　・会議室１<br><br>
+              　・7/3（木）試験終了後<br>　・会議室１<br><br>
 
 　※当日の活動内容とスケジュール（予定）<br>
-　13:20  当日打ち合わせ<br>
+　13:10  当日打ち合わせ<br>
 　13:50  受付、誘導<br>
 　14:30  学校説明会 開始<br>
-　16:00  施設見学案内、質問対応<br>
+　16:00  施設見学案内、質問対応開始<br>
 　17:00  終了、下校<br><br>
       </td>
                           <td width=40%>
-            <a href="https://forms.gle/fjU2n8YEwuqNLkei8" class="btn btn-flat"><span>アンケートは<br>こちら</span></a><br>    
+            <a href="https://forms.gle/yNYhhtMXiE4qxUBR8" class="btn btn-flat"><span>アンケートは<br>こちら</span></a><br>    
             <br>参加・不参加ともに
-            <br>5/21（水）までに回答<br>
+            <br>6/26（木）までに回答<br>
             <br>回答を変更したい場合は、
             <br>「回答を編集」をクリック</td>
-        </tr>
-        <tr>
-            <th width=20%>第2回学校説明会<br>〔7月5日（土）〕</th>
-            <td width=40%>後日配信予定</td>
-            <td width=40%>後日配信予定</td>
         </tr>
      
         <tr>
