--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ a.btn-flat:hover:before {
 <td class="sche" width=40%>
               　<br><br>
               　※スクナビ打ち合わせ<br>
-              　・当日実施<br>　・会議室１<br><br>
+              　・8月29日(金)  15:50 <br>　・会議室１<br><br>
 
 　※当日の活動内容とスケジュール（予定）<br>
 　13:10  当日打ち合わせ<br>
@@ -254,7 +254,7 @@ a.btn-flat:hover:before {
                           <td width=40%>
             <a href="https://forms.gle/CDNvypYkDffCZXTD8" class="btn btn-flat"><span>アンケートは<br>こちら</span></a><br>    
             <br>参加・不参加ともに
-            <br>7/10（木）までに回答<br>
+            <br>8/23（土）までに回答<br>
             <br>回答を変更したい場合は、
             <br>「回答を編集」をクリック</td>
 
